# sparse_rc_2d

./: Cargo.toml  README.md
.VSCodeCounter/2025-08-20_13-13-28/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-20_14-05-10/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-20_14-52-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-20_15-40-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-21_11-06-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-24_13-28-40/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/shaders/: dist_field.wgsl  dist_jfa_loop.wgsl  dist_jfa_seed.wgsl  draw.wgsl  output.wgsl  ray_debug.wgsl  rc.wgsl  rc_dense.wgsl  rc_sparse.wgsl  reset.wgsl
gputil/: Cargo.toml
gputil/src/: attach.rs  bind.rs  color.rs  compute.rs  depth.rs  lib.rs  raster.rs  utils.rs
src/: lib.rs  main.rs
src/core/: constants.rs  math.rs
src/debug/: metrics.rs  statistics.rs  timings.rs
src/gpu_api/: attach.rs  bind.rs  color.rs  pass.rs
src/gpu_passes/: dist_field.rs  dist_jfa_loop.rs  dist_jfa_seed.rs  draw.rs  output.rs  plugin.rs  ray_debug.rs  rc_dense.rs  (+2 more)
(+7 files in other folders)
