[package]
name = "rc"
version = "1.0.0"
edition = "2021"

[dependencies]
# bevy = "0.17.0"
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "5058f8a9e67182f202f6a9945681964598280872" }
derive_builder = "0.20.2"
ndex = "0.1.0"
chain_link = "0.1.3"
rand = "0.9.1"
image = "0.25.6"
num-format = "0.4.4"
pretty-type-name = "1.0.1"