[package]
name = "gputil"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.17.0" awaiting https://github.com/bevyengine/bevy/issues/20715
bevy = { git = "https://github.com/bevyengine/bevy", rev = "e2ba37fcb2daa7c476a65899121dfadcfa4c58b3" }
derive_builder = "0.20.2"
chain_link = "0.1.3"
